new file option is working without asking if you want save the data

--- a/src/pages/editor/index.html
+++ b/src/pages/editor/index.html
@@ -2,10 +2,11 @@
 <html lang="eng" dir="'ltr">
     <head>
         <meta charset="utf-8">
-        <title>Ru EDITOR</title>
+        <title id="title">Ru EDITOR</title>
         <link rel="stylesheet" href="./styles.css" type="text/css">
     </head>
     <body>
         <textarea id="text"></textarea>
     </body>
+    <script src="./scripts.js"></script>
 </html>
