--- a/src/pages/editor/index.html
+++ b/src/pages/editor/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./styles.css" type="text/css">
     </head>
     <body>
-        <textarea id="text"></textarea>
+        <textarea id="text" onkeyup="handleChangeText()"></textarea>
     </body>
     <script src="./scripts.js"></script>
 </html>
